--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,8 @@ body {
   text-align: center;
 }
 .attribution a {
+  left: 50%;
+  transform: translateX(-50%);
   color: hsl(228deg, 45%, 44%);
   transition: color 0.3s;
 }
